# tutorial-ubuntu-launchpad-release

./: .travis.yml  CMakeLists.txt  README.md
ci/: build_package.sh  install_dependencies.sh  test_package.sh
cpp/MathFunctions/: CMakeLists.txt
cpp/MathFunctions/src/: mysqrt.cxx
cpp/tutorial/: CMakeLists.txt  MathFunctions.cxx
cpp/tutorialbin/: CMakeLists.txt  tutorial.cxx
test/: CMakeLists.txt  test-tutorial.cxx
